Correcting TestMehodenames in the Testfiles